--- a/client/src/Components/Login_Signup/signup.css
+++ b/client/src/Components/Login_Signup/signup.css
@@ -1,6 +1,6 @@
 .loginDiv {
     width: 350px;
-    height: 400px;
+    height: 100vh;
     margin-left: 500px;
     /* border: 1px solid red; */
     margin-top: 20px;
